# bounswe2020group3

./: .gitignore  README.md  package-lock.json
backend/: .coveragerc  .gitignore  .pylintrc  Dockerfile  Procfile  README.md  db.sqlite3  docker-compose.yml  linux_setup  pre-commit  pyproject.toml  requirements.txt  setup.sh  task-definition.json
backend/api/: admin.py  mail.py  permission.py  urls.py  utils.py
backend/api/migrations/: 0001_initial.py  0002_auto_20201114_1625.py  0002_auto_20201116_2324.py  0002_auto_20201121_2147.py  0002_auto_20201204_1708.py  0002_auto_20201207_0047.py  0002_collaborationrequest.py  0002_profile.py  0003_auto_20201115_2248.py  0003_auto_20201206_1712.py  0004_event.py  0004_merge_20201116_2348.py  0004_merge_20201206_1815.py  0005_auto_20201121_1503.py  0005_auto_20201206_2024.py  0005_file.py  0006_auto_20201121_1551.py  0006_auto_20201206_2025.py  0007_auto_20201121_1658.py  0007_auto_20201206_2026.py  0008_auto_20201121_2214.py  0008_auto_20201206_2028.py  0009_auto_20201208_1543.py  0009_auto_20201208_2042.py  0009_auto_20201209_1436.py  0009_auto_20201212_1633.py  0010_auto_20201208_1725.py  0010_auto_20201212_1717.py  0010_merge_20201212_1700.py  0010_merge_20201213_0009.py  0010_merge_20201214_2048.py  0010_profile_is_public.py  0011_auto_20201208_1727.py  0011_auto_20201214_2048.py  0012_auto_20201208_1730.py  0012_auto_20201215_1844.py  0015_comment.py  (+19 more)
backend/backend/: settings.py  swagger_api.py  tests.py  urls.py
backend/db-dumps/: paperlayerdb.sql
backend/docker/: run-local.sh  run.sh
backend/orgenv/: pyvenv.cfg
(+4420 files in other folders)
